--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/view": "^6.38.6",
+    "@uiw/codemirror-themes-all": "^4.25.3",
+    "@uiw/react-codemirror": "^4.25.3",
     "clsx": "^2.1.1",
     "i18next": "^25.5.3",
     "i18next-browser-languagedetector": "^8.2.0",
-    "prism-react-renderer": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
-    "react-simple-code-editor": "^0.14.1",
     "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
