--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@codemirror/language": "^6.11.3",
     "@codemirror/view": "^6.38.6",
+    "@lezer/highlight": "^1.2.3",
+    "@types/codemirror": "^5.60.17",
     "@uiw/codemirror-themes-all": "^4.25.3",
     "@uiw/react-codemirror": "^4.25.3",
     "clsx": "^2.1.1",
