--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "i18next": "^25.5.3",
     "i18next-browser-languagedetector": "^8.2.0",
+    "motion": "^12.26.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
