--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-error-boundary": "^6.0.0",
     "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.3",
-    "reactjs-popup": "^2.0.6"
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
